# qt_tourist

./: CMakeLists.txt  README.md  main.cpp
resource/: images.qrc  qml.qrc
resource/form/: 1.ui
resource/qml/: listen.qml  test0.qml
resource/qss/: test.qss
resource/src/html/: index.html
resource/src/react/app/: package-lock.json
source/: CMakeLists.txt  mainWidget.cpp  mainWidget.h  mainWindow.cpp  my_widget.cpp  my_widget.h
source/1/: 1.h  1.qrc  test_ui.h
source/qt_html/: CMakeLists.txt  common.cpp  common.h  core.cpp  core.h  widget.cpp  widget.h  worker.cpp  worker.h
source/qt_qml_test/: CMakeLists.txt  qml_test.cpp  qml_test.h
source/qt_ui_test/: 1.h  CMakeLists.txt  test_ui.h
source/resource/: html.qrc  images.qrc  qss.qrc
source/resource/qml/: listen.qml
source/resource/qss/: test.qss
source/resource/src/vueTest/: package-lock.json  package.json
test/: my_widget.cpp
utils/: CMakeLists.txt  common_utils.cpp  common_utils.h  utils.cpp  utils.h
utils/core/: CMakeLists.txt  qt_export.h
utils/sub_dir/: CMakeLists.txt  sub_test.cpp  sub_test.h
